# smort-thrasher-backend

./: .editorconfig  .env.example  .gitmodules  Dockerfile  LICENSE  README.md  app.py  docker-compose.yaml  pyproject.toml  requirements.txt  setup.sh
ML-model/: sensor_1.txt  sensor_1_model.joblib  sensor_3.txt  sensor_3_model.joblib  sensor_4.txt  sensor_6_model.joblib  sensor_7.txt  sensor_8.txt  sensor_8_model.joblib  sensor_9.txt
app/: main.py
app/ml_model/: sensor_2.txt  sensor_2_model.joblib  sensor_4_model.joblib  sensor_5.txt  sensor_5_model.joblib  sensor_6.txt  sensor_7_model.joblib  sensor_9_model.joblib
app/models/: __init__.py  record.py  region.py  request_models.py  response_models.py  sensor.py
app/repositories/: __init__.py  base_repository.py  record_repository.py  region_repository.py  sensor_repository.py
app/routes/: __init__.py  analytics.py  record.py  region.py  sensor.py
app/services/: database.py  env.py  maps_router.py  optimize_collection.py  prediction.py
components/: database.py  generate_fake_data.py  randomForest.py  smortML.py  smortPredictor.py  tempCodeRunnerFile.py
db/: datacsv.csv  insert.sql  smort-v1  smort.sql  smort_v2
migrations/: env.py
migrations/versions/: 4a1cfe4c9a0e_update_region_table.py  9deb2af671de_insert_initial_data.py  a21f30b68800_create_initial_tables.py
